<resources>
    <string name="app_name">Dekkan100</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="orders">MyOrders</string>
    <string name="favorites">MyFavorites</string>
    <string name="offers">Offers</string>
    <string name="mymesages">Messages</string>
    <string name="settings">Settings</string>
    <string name="aboutus">AboutUs</string>
    <string name="contactus">ContactUs</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="countries">Select Country</string>
    <string name="action_settings">Settings</string>
    <string name="changelang">Change Language</string>
    <string name="loadimages">Loading Images</string>
    <string name="save">Save</string>
    <string name="restart">Restart App ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="areyousure">Exit App ?</string>
    <string name="logintoyouraccount">Login to Your Account</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="forgetuser">Forget Password ?</string>
    <string name="forgetpass">Forget Password ?</string>
    <string name="donthaveaccount">Do not have account ? </string>
    <string name="rigister">Register Now</string>
    <string name="skipthis">Skip This</string>
    <string name="codewillsend">Code will be sent now on your registered phone</string>
    <string name="signup">Register New Account</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number to Active Account</string>
    <string name="password">password 8 chars or digits</string>
    <string name="repassword">Verifying Password</string>
    <string name="reg">Register</string>
    <string name="haveaccount">Already Have Account ?</string>
    <string name="signin">SignIn</string>
    <string name="insertcode">Please inset phone verification code</string>
    <string name="veificationcode">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="activeaccount">Active Account</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="category">Category</string>
    <string name="mostrequested">Most Requested</string>
    <string name="price">Price</string>
    <string name="discounted">Discounted Products</string>
    <string name="cate">Categories</string>
    <string name="vindors">Stores</string>
    <string name="sale">Sale</string>
    <string name="profiletab">Profile</string>
    <string name="messagestab">Messages</string>
    <string name="addgiftcard">Add Present Card</string>
    <string name="sender">Sender Name</string>
    <string name="reciver">Receiver Name</string>
    <string name="message">Message</string>
    <string name="relatedproducts">Related Products</string>
    <string name="buy">Buy</string>
    <string name="aboutstore">About Store</string>
    <string name="categories">Categories</string>
    <string name="storerate">Rate this Store</string>
    <string name="addreview">Add Comment</string>
    <string name="send">Send</string>
    <string name="noreviews">No Reviews</string>
    <string name="productrate">Rate this Product</string>
    <string name="emptylist">Empty List</string>
    <string name="orderstab">Orders</string>
    <string name="suborderstab">SubOrders</string>
    <string name="addtoshoppingcart">Add to Shopping Cart</string>
    <string name="knows">KnowAboutUs</string>
    <string name="meesgeus">MessagingUs</string>
    <string name="contavtus">ContactUs</string>
    <string name="copyright">copyright</string>
    <string name="contene">Continue</string>
    <string name="emptycart">Empty Cart</string>
    <string name="cartempty">Shopping Cart Empty</string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="nomessages">No Messages</string>
    <string name="noorders">No Orders</string>
    <string name="nocategories">No Categories</string>
    <string name="nostores">No Stores</string>
    <string name="nooffers">No Offers</string>
    <string name="pressagain">Press Again to Exit App</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_login" translatable="false">Login</string>
</resources>
