<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="dekkan100.appsmatic.com.dekkan100.Fragments.ShoppingCartFrag">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frameLayout5"
        android:layout_above="@+id/linearLayout14"
        android:layout_alignParentTop="true">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cart_list">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cartempty"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:id="@+id/cart_empty_flag" />

    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:id="@+id/linearLayout14">

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/contene"
            android:id="@+id/cart_contin_btn"
            android:background="@drawable/backg_btn"
            android:padding="5dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/emptycart"
            android:id="@+id/cart_empty_btn"
            android:background="@drawable/emptycardbtn"
            android:padding="5dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>
